--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "be-habit",
   "version": "0.0.0",
   "private": true,
+  "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node  ./db/seeds/run-seed.js",
     "test": " jest",
     "prepare": "husky install",
     "psql": "psql -f playground.sql > output.txt",
-    "start": "node ./bin/www",
+    "start": "node listen.js",
     "seed-prod": "NODE_ENV=production npm run seed"
   },
   "dependencies": {
